--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.8",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.5.0",
     "react-pdf": "^10.1.0",
     "react-router-dom": "^7.8.1",
