--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.16.3",
+    "ts-node": "^10.9.2",
     "zod": "^4.0.17"
   },
   "devDependencies": {
@@ -44,7 +45,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
-    "@types/node": "^24.2.1",
+    "@types/node": "^24.3.0",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
     "prisma": "^6.14.0",
